@@ -2,6 +2,9 @@
 Change log for datafield_constant
 ========================================
 
+2025-02-02 (22)
+ - use mustache templates in Moodle >= 4.4
+
 2021-10-05 (20)
  - calculate template values dynamically using datafield_admin when exporting to CSV
 
